# cdumay_error

./: Cargo.toml  README.md
.github/workflows/: release.yml
cdumay_error/: Cargo.toml  README.md
cdumay_error/src/: convert.rs  error.rs  kind.rs  lib.rs
cdumay_error/tests/: error.rs  error_converter.rs
cdumay_error_derive/: Cargo.toml  README.md
cdumay_error_derive/src/: lib.rs
src/: lib.rs
