[package]
name = "cdumay_error"
version = "2.0.1"

authors = ["Cédric Dumay <cedric.dumay@gmail.com>"]
description = "A Rust Library which define standard errors"
documentation = "https://docs.rs/cdumay_error"
edition = "2024"
homepage = "https://github.com/cdumay/cdumay_error"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/cdumay/cdumay_error"

[dependencies]
cdumay_core = "0.1"
serde-value = "0.7"
