[package]
name = "cdumay_error"
version = "1.0.2"
edition = "2021"

authors = ["Cédric Dumay <cedric.dumay@gmail.com>"]
description = "Streamlining Error Handling in Rust"
documentation = "https://docs.rs/cdumay_error"
homepage = "https://github.com/cdumay/cdumay_error"
license-file = "../LICENSE"
readme = "README.md"
repository = "https://github.com/cdumay/cdumay_error"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-value = "0.7"
cdumay_error_derive = { version = "1.0", path = "../cdumay_error_derive", optional = true }

[features]
default = []
derive = ["cdumay_error_derive"]
