[package]
name = "cdumay_error_derive"
version = "1.0.1"
edition = "2021"

authors = ["Cédric Dumay <cedric.dumay@gmail.com>"]
description = "Streamlining Error Handling in Rust"
documentation = "https://docs.rs/cdumay_error_derive"
homepage = "https://github.com/cdumay/cdumay_error"
license-file = "../LICENSE"
readme = "README.md"
repository = "https://github.com/cdumay/cdumay_error"

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = "2.0"
quote = "1.0"

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]
